fix: css alignment issue fix (#550)

--- a/packages/@momentum-design/figma-plugin-assets-export/src/ui/sections/export/Export.css
+++ b/packages/@momentum-design/figma-plugin-assets-export/src/ui/sections/export/Export.css
@@ -2,9 +2,9 @@
     font-weight: 600;
 }
 
-.align-bottom-center {
+.align-bottom-left {
     margin-top: auto;
-    justify-content: center
+    justify-content: left;
 }
 
 .asset-select {
